# Ensight

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt  schema.md  test.db
backend/app/: auth.py  auth_router.py  config.py  db.py  image_router.py  images_router.py  main.py  models.py  s3_utils.py  security.py  utils.py
backend/app/auth/: aws.py  dev_auth.py  login.py  register.py  s3.py
backend/app/core/: aws.py  config.py  security.py
backend/app/database/: db.py
backend/app/db/: __init__.py  database.db  database.py  session.py
backend/app/dd/: dd-database.py  dd-images_router.py  dd-security.py  dev.db
backend/app/libraries/: __init__.py
backend/app/models/: __init__.py  album.py  albums.py  image.py  image_album.py  image_favorite.py  image_tag.py  library.py  share_link.py  tag.py  user.py
backend/app/routers/: __init__.py  auth_router.py  images_router.py  library_router.py
backend/app/routes/: __init__.py  albums.py  favorites.py  galleries.py  gallery.py  health.py  images.py  share_links.py  users.py
backend/app/schemas/: __init__.py  album.py  image.py  library.py  login.py  share_link.py  tag.py  user.py
backend/app/scripts/: check_tables.py  check_user.py  init_db.py  reset_images_table.py  reset_users_table.py
backend/app/services/: __init__.py  s3_utils.py
backend/app/utils/: auth.py  startup.py
backend/db/: database.db
backend/ensight/: .htaccess  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/ensight/src/: App.jsx  main.jsx  (+1 more)
backend/scripts/: test_db.py
(+132 files in other folders)
